[package]
name = "netflood"
version = "0.1.0"
authors = ["tkgsy <meirvg@gmail.com>"]

[dependencies]
serde_json = "1.0"
netflow = { git = "https://github.com/4hiziri/rust-netflow.git" }
pcapng = {git = "https://github.com/kornholi/pcapng.git"}
pnet = "0.21.0"
log = ""
env_logger = ""
clap = {version = "~2.27.0", features = ["yaml"]}
rand = ""
time = ""